2018-10-18  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #86694: Avoid constant TYPO3_site with TYPO3 9 LTS
	* Resolves #86695: In frontend, localize using current site language when it exists
	* Update version to 6.7.1

2018-10-14  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #86610: Add schema migration service and dumping utility
	* Resolves #86654: Migrate extension update script to TYPO3 LTS 9
	* Resolves #84258: Call to a member function getTreeList() on null
	* Update version to 6.6.0
	* Resolves #83722: Installation via Composer does not work correctly
	* Resolves #86656: Change name of Swaziland to Eswatini
	* Update version to 6.7.0

2018-10-11  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #86633: Migrate Recordlist hook to TYPO3 9 LTS
	* Resolves #86634: Remove @inject annotation

2018-10-9  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #86608: Remove support for TYPO3 7 LTS - Thanks to Tomas Norre Mikkelsen
	* Resolves #86609: Remove references to TYPO3_DB object - Thanks to Tomas Norre Mikkelsen

2017-12-19  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #83060: Wrong table name in Configuration/TCA/Overrides/static_countries.php - Thanks to Simon Schaufelberger
	* Update manual
	* Update version to 6.5.1

2017-11-19  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #83033: Adapt suggest options to 8 LTS
	* Resolves #82808: Critical Invalid Cache Bug - Thanks to Tim Lochmüller
	* Update version to 6.5.0

2017-10-16  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #82779: Corrections to official and English names of Swiss cantons - Thanks to Urs Bräm
	* Resolves #80408: Error in composer replace statement

2017-04-11  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Update version to 6.4.3

2017-02-21  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #79648: Call to undefined method SJBR\StaticInfoTables\Domain\Model\Country::getAddessFormat()